--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.11",
     "@mui/material": "^5.14.11",
     "@mui/x-charts": "^6.0.0-alpha.12",
+    "@reduxjs/toolkit": "^1.9.7",
     "apexcharts": "^3.42.0",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
@@ -23,6 +25,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "tailwindcss": "3.3.3"
   }
 }
