--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.15",
     "@mui/joy": "^5.0.0-beta.11",
     "@mui/material": "^5.14.11",
     "@mui/x-charts": "^6.0.0-alpha.12",
@@ -19,6 +20,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
+    "hamburger-react": "^2.5.0",
     "next": "13.5.1",
     "postcss": "8.4.30",
     "react": "18.2.0",
