--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "liveServer.settings.port": 5502
+  "liveServer.settings.port": 5502,
+  "[javascript]": {
+    "editor.formatOnSave": true
+  },
+  "prettier.requireConfig": true
 }
