--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -29,5 +30,8 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.2"
   }
 }
