--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine": "^6.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "hamburger-react": "^2.5.1",
+    "next": "^14.2.11",
     "onlinefondet": "file:",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
