--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/styled-engine": "^6.1.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "clsx": "^2.1.1",
     "hamburger-react": "^2.5.1",
     "next": "^14.2.11",
     "onlinefondet": "file:",
