--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.5.1",
     "hamburger-react": "^2.5.0",
     "next": "13.5.1",
+    "next-auth": "^4.24.7",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
