--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "hamburger-react": "^2.5.1",
+    "lucide-react": "^0.441.0",
     "next": "^14.2.11",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
