add google OAUTH 2.0

--- a/.env.local.template
+++ b/.env.local.template
@@ -1,6 +1,5 @@
-NEXTAUTH_URL=http://localhost:3000/
-NEXTAUTH_SECRET=#use [openssl rand -hex 32] to generate a 32 bytes value
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
 
-AUTH0_CLIENT_ID=#client id
-AUTH0_CLIENT_SECRET=#client secret
-AUTH0_ISSUER=#issuer base url, example: example.us.auth0.com
+NEXTAUTH_SECRET=your-secret-key
+NEXTAUTH_URL=http://localhost:3000
