--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
+    "googleapis": "^144.0.0",
     "hamburger-react": "^2.5.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
