setup prisma and supabase

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.0",
+    "@prisma/client": "^5.20.0",
     "@reduxjs/toolkit": "^2.2.7",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
@@ -22,6 +23,7 @@
     "next": "14.2.11",
     "onlinefondet-new": "file:",
     "prettier": "^3.3.3",
+    "prisma": "^5.20.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
