feat: members are uploaded to Supabse

--- a/.env.local.template
+++ b/.env.local.template
@@ -13,3 +13,9 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 NEXTAUTH_SECRET=your-secret-key
 NEXTAUTH_URL=http://localhost:3000
+
+
+NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+SUPABASE_SERVICE_KEY=your_supabase_service_role_key
+
