--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.0",
     "@prisma/client": "^5.20.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@supabase/supabase-js": "^2.45.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "googleapis": "^144.0.0",
@@ -29,6 +30,7 @@
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
