--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
