--- a/.env.template
+++ b/.env.template
@@ -1,23 +1,11 @@
-#.env.local
 NEXTAUTH_URL = http://localhost:3000/
 NEXTAUTH_SECRET = # Generate a secret key using the command: openssl rand -base64 32
 
 GOOGLE_CLIENT_ID = # Get this from Google Developer Console
 GOOGLE_CLIENT_SECRET = # Get this from Google Developer Console
 
-GOOGLE_CLIENT_SECRET=your-google-client-secret
+NEXT_SUPABASE_URL = # your_supabase_url
+NEXT_SUPABASE_ANON_KEY = # your_supabase_anon_key
+SUPABASE_SERVICE_KEY = # your_supabase_service_role_key
 
-NEXTAUTH_SECRET=your-secret-key
-NEXTAUTH_URL=http://localhost:3000
-
-
-NEXT_SUPABASE_URL=your_supabase_url
-NEXT_SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_KEY=your_supabase_service_role_key
-
-
-#.env
-DATABASE_URL= # Get this from your database provider
-DIRECT_URL= # Get this from your database providerGOOGLE_CLIENT_ID=your-google-client-id
-
-
+DATABASE_URL = # Get this from your database provider
