--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.20.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@supabase/supabase-js": "^2.45.4",
+    "chart.js": "^4.4.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "googleapis": "^144.0.0",
@@ -29,7 +30,7 @@
     "prettier": "^3.3.3",
     "prisma": "^5.20.0",
     "react": "^18",
-    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
