change admin check

--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,5 @@ NEXT_SUPABASE_ANON_KEY = # your_supabase_anon_key
 SUPABASE_SERVICE_KEY = # your_supabase_service_role_key
 
 DATABASE_URL = # Get this from your database provider
+
+ADMIN_EMAILS = # List of admin emails -> TODO - vente på Dotkom 
