--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "@supabase/supabase-js": "^2.45.4",
+    "@vercel/analytics": "^1.4.1",
     "chart.js": "^4.4.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
