--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-scroll": "^1.9.3",
     "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/react": "^18",
+    "@types/react-scroll": "^1.8.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "tailwindcss": "^3.4.1",
